<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:contextClickable="true"
    android:foregroundTint="@color/colorPrimaryDark"
    tools:game=".MainActivity">

    <TextView
        android:id="@+id/welcomeBox"
        android:layout_width="237dp"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/welcome_msg"
        android:textSize="32sp"
        android:autofillHints="username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="199dp"
        android:layout_height="83dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="startGame"
        android:text="@string/start_btn_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBox" />

    <EditText
        android:id="@+id/p1NameBox"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/default_p1_name"
        android:inputType="textPersonName"
        android:autofillHints="@string/default_p1_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBox" />

    <EditText
        android:id="@+id/p2NameBox"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/default_p2_name"
        android:inputType="textPersonName"
        android:autofillHints="@string/default_p2_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBox" />

    <EditText
        android:id="@+id/roundCount"
        android:layout_width="161dp"
        android:layout_height="74dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/roundPromptLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/roundPromptLabel"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginBottom="64dp"
        android:text="@string/round_prompt_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/difficultySlider"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="12dp"
        android:max="2"
        android:progress="0"
        android:progressTint="@android:color/holo_red_dark"
        android:saveEnabled="true"
        android:thumbTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

</androidx.constraintlayout.widget.ConstraintLayout>